[package]
name = "chisels_and_importers"
version = "0.1.0"
edition = "2021"
authors = ["Alainx277"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
bitstream-io = "2.2.0"
clap = { version = "4.4.12", features = ["derive"] }
dot_vox = "5.1.1"
fastnbt = "2.4.4"
lz4_flex = "0.11.1"
miniz_oxide = "0.7.1"
palette = "0.7.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
